--- a/sass/site/header/_header-layouts.scss
+++ b/sass/site/header/_header-layouts.scss
@@ -86,7 +86,6 @@
 			display: block;
 		}
 		.ast-mobile-menu-buttons{
-			text-align: center;
 			display: block;
 		}
 		.site-branding,
@@ -235,14 +234,6 @@
 					display: block;
 				}
 			}
-		}
-	}
-}
-
-.mobile-header-order-default{
-	&.header-main-layout-2 {
-		.main-header-container {
-			display: block;
 		}
 	}
 }
